fix sticky on small screen size < 768

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -25,3 +25,13 @@ body {
 li {
   list-style: none;
 }
+
+@media (max-width:776px){
+  .video {
+    position: relative;
+  }
+  .list {
+    margin-top: 64px;
+  }
+
+}
